--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,3 +1,4 @@
+---
 name: publish
 on:
   release:
@@ -5,9 +6,10 @@ on:
     - published
 jobs:
   publish:
+    name: Publish to RubyGems
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: "3.1"
