--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,20 +1,23 @@
+---
 name: test
 on:
   pull_request:
   push:
     branches:
+    - gh-readonly-queue/**
     - master
 jobs:
   test:
+    name: Run tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
         ruby:
+        - "3.2"
         - "3.1"
         - "3.0"
-        - "2.7"
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
